// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stripIndent > can be used with nested message 1`] = `
"first line

foo
bar

last line"
`;

exports[`stripIndent > removes indent from literal string 1`] = `
"first line
  second line
    third line
last line"
`;
